--- a/member/join.html
+++ b/member/join.html
@@ -9,13 +9,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="ko-KR">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<link href="/static/css/join.css" media="all" rel="stylesheet" type="text/css">
+<link href="recruitment/static/css/member/join.css" media="all" rel="stylesheet" type="text/css">
 <script type="text/javascript"
 	src="//www.saraminimage.co.kr/js/libs/jquery-1.8.3.min.js"></script>
 <script
 	src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script type="text/javascript" src="/static/js/join.js"></script>
-<script type="text/javascript" src="/static/js/placeholder.js"></script>
+<script type="text/javascript" src="recruitment/static/js/member/join.js"></script>
+<script type="text/javascript" src="recruitment/static/js/member/placeholder.js"></script>
 </head>
 <body class="join_body">
 	<div id="join_wrapper" class="">
