--- a/member/join.html
+++ b/member/join.html
@@ -6,6 +6,7 @@
 <meta name="Description"
 	content="개인/기업 회원가입 안내: 취업 확률을 높이는 사람인 만의 특별한 개인회원 서비스, 기본 이력서/명품 이력서/직종별 이력서 등 다양하고 쉬운 이력서 작성, 무료 입사지원 통계 서비스, 무료 이력서 강조 효과 서비스. 채용효과를 높이는 사람인 만의 특별한 기업회원 서비스 - 최대 10개까지 채용공고 무료 등록, 채용업무 효율화 - 편리하고 간편한 지원자 관리, 명품 인재가 가득한 인재정보 열람 상품, 높은 채용효과를 보장하는 저렴하고 다양한 채용광고 상품.">
 <meta name="naver" content="nosublinks">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="ko-KR">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
